--- a/src/offscreen/offscreen.html
+++ b/src/offscreen/offscreen.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Offscreen Document</title>
+    <meta charset="UTF-8">
+    <script type="module" src="offscreen.js"></script>
 </head>
 <body>
-  <script src="offscreen.js"></script>
+    <!-- Offscreen document for parsing HTML -->
 </body>
 </html> 
