feat: implement search functionality with UI enhancements
This commit introduces a new search feature in the extension, enhancing user experience with the following changes:

- Added a search panel in the UI, allowing users to search for topics and authors.
- Implemented search input handling with debounce to optimize performance.
- Integrated a clear button for the search input to improve usability.
- Enhanced the background script to perform asynchronous search requests and handle results.
- Updated CSS styles for the search panel and results to ensure a cohesive design.
- Improved event handling for showing and hiding the search panel based on user interactions.

These enhancements aim to provide users with a more interactive and efficient way to find relevant content.

--- a/src/actions/index.html
+++ b/src/actions/index.html
@@ -16,12 +16,27 @@
             <span class="material-icons">trending_up</span>
             <span data-i18n="header_title"></span>
         </h1>
-        <button class="settings-button" id="settings-btn">
-            <span class="material-icons">settings</span>
-        </button>
-        <button class="refresh-button" id="refresh-btn">
-            <span class="material-icons">refresh</span>
-        </button>
+        <div class="header-actions">
+            <button class="search-button" id="search-btn">
+                <span class="material-icons">search</span>
+            </button>
+            <button class="settings-button" id="settings-btn">
+                <span class="material-icons">settings</span>
+            </button>
+            <button class="refresh-button" id="refresh-btn">
+                <span class="material-icons">refresh</span>
+            </button>
+        </div>
+    </div>
+    <div id="search-panel" class="search-panel hidden">
+        <h2>Ara</h2>
+        <div class="search-input-wrapper">
+            <span class="material-icons search-icon">search</span>
+            <input type="text" id="search-input" placeholder="Başlık veya yazar ara..." autocomplete="off">
+            <span class="material-icons search-clear">close</span>
+            <div class="search-loading"></div>
+        </div>
+        <div id="search-results-container"></div>
     </div>
     <div class="content">
         <div id="settings-panel" class="settings-panel hidden">
